--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,10 @@
         <title>Hannah's Awesome Image Gallery</title>
         <meta name="description" content="This is a cool image gallery">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+         <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="strip.js"></script>
+        <link rel="stylesheet" type="text/css" href="strip.css"/>
 
         <link rel="stylesheet" href="screen.css">
 	</head>
@@ -16,7 +20,7 @@
 			<h1>Photos of Kittens</h1>
 		</header>
 		<ul>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
 			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
 			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
 			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
