--- a/Index.html
+++ b/Index.html
@@ -21,17 +21,17 @@
 		</header>
 		<ul>
 			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
 		</ul>
 		
 		<footer>
