--- a/Index.html
+++ b/Index.html
@@ -17,21 +17,18 @@
 	<body>
 	<div class="wrapper">
 		<header>
-			<h1>Photos of Kittens</h1>
+			<h1>HELLO BUNNIES</h1>
 		</header>
 		<ul>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
-			<li><a href="http://placekitten.com/g/400/600" class="strip"><img src="http://placekitten.com/g/150/150" alt="kitten" title="kitten"></a></li>
+			<li><a href="holland lop 1.jpg" style="width:400px;height:600px" class="strip"><img src="holland lop 1.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland lop 2.jpg" style="width:400px;height:600px" class="strip"><img src="holland lop 2.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland 3.jpg" style="width:400px;height:600px" class="strip"><img src="holland 3.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland 4.jpg" style="width:400px;height:600px" class="strip"><img src="holland 4.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland 5.jpg" style="width:400px;height:600px" class="strip"><img src="holland 5.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland 6.jpg" style="width:400px;height:600px" class="strip"><img src="holland 6.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland 7.jpg" style="width:400px;height:600px" class="strip"><img src="holland 7.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			<li><a href="holland 8.jpg" style="width:400px;height:600px" class="strip"><img src="holland 8.jpg" style="width:150px;height:150px" alt="bunny" title="bunny"></a></li>
+			
 		</ul>
 		
 		<footer>
